@@ -5,5 +5,5 @@
 	"author": "stringweasel",	
 	"factorio_version": "1.1",
 	"dependencies": ["base >= 1.1"],
-	"description": "Compare of your wit and driving skills against your friends in this brutal minigame! Based on 'Achtung, Die Kurwe!' (or 'Curve Fever') this game places you and friends in an arena to battle until one player is left. A tron-like trail is left behind your vehicle and various power-ups can give an advantage (or confuse your enemies!). Included is a lobby-system which allows for a persistently hosted mini-game. Feel free to host this yourself, or even create your own custom map!"
+	"description": "Compare of your wit and driving skills against your friends in this brutal multiplayer minigame! Based on 'Achtung, Die Kurwe!' (or 'Curve Fever') this game places you and friends in an arena to battle until one player is left. A tron-like trail is left behind your vehicle and various power-ups can give an advantage (or confuse your enemies!). Included is a lobby-system which allows for a persistently hosted mini-game. Feel free to host this yourself, or even create your own custom map!"
 }
